@@ -6,6 +6,12 @@
         have a headache right now, though, so I won't say much.  I'll let
 	Eric talk :)
 
+	Eric: I uh. I bought 72 cans of soda yesterday. It only cost $15
+	or so. I figure I'll be through it in less than two weeks. A
+	dollar a day on soda isn't so bad. For the fourth release in a row,
+	Oscar is fixed. Isn't that exciting. Judging from history I'd say
+	that it won't stay fixed long; but judging from what I know has
+	changed, we shouldn't have any more troubles.
 
 0.11.0-pre10 (04/13/2001):
 	Rob: EEP! It's Friday the 13th!!!  I think I fixed a few buggies
